# lhwservice

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: build-debug-x64.ps1  build-debug-x86.ps1  build-release-x64.ps1  build-release-x86.ps1  install-debug-x64.ps1  install-debug-x86.ps1  install-release-x64.ps1  install-release-x86.ps1
include/: HardwareService.h
include/exceptions/: GenericException.h  HardwareNotFoundException.h  JsonInvalidDataException.h  MemoryReadException.h  SensorNotFoundException.h  SensorParseException.h  SensorReadException.h
include/models/: Hardware.h  HwStatus.h  HwStatusType.h  IndexItem.h  Metadata.h  NvmeSmart.h  Sensor.h  SensorValue.h  SmartAttribute.h
src/: CMakeLists.txt  Constants.h  HardwareService.cpp
src/data/: Converters.cpp  Converters.h  DataLoader.cpp  DataLoader.h  HardwareTreeLoader.cpp  HardwareTreeLoader.h  HardwareTreeParser.cpp  HardwareTreeParser.h  HwStatusLoader.cpp  HwStatusLoader.h  HwStatusParser.cpp  HwStatusParser.h  SensorsDataLoader.cpp  SensorsDataLoader.h  SensorsParser.cpp  SensorsParser.h
src/exceptions/: GenericException.cpp
src/models/: Hardware.cpp  HwStatus.cpp  IndexFormat.h  IndexItem.cpp  Metadata.cpp  NvmeSmart.cpp  Sensor.cpp  SensorValue.cpp  SmartAttribute.cpp
